change index photos

--- a/index.html
+++ b/index.html
@@ -94,35 +94,35 @@ pre_footer_link: contato
             <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
                     <a class="" href="serviços.html">
-                        <img src="example/welcome_1.jpg" alt="">
+                        <img src="img/welcome_1.png" alt="">
                         <div class="welcome text-center">
                             <i></i>
                         </div>
                     </a>
                 </div>
-                <h3>Garanta seu certificado</h3>
+                <h3>Aulas de dança de salão</h3>
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
                     <a class="" href="horarios.html">
-                        <img src="example/welcome_2.jpg" alt="">
+                        <img src="img/welcome_2.png" alt="">
                         <div class="welcome text-center">
                             <i></i>
                         </div>
                     </a>
                 </div>
-                <h3>Verifique seu cronograma</h3>
+                <h3>Coreografias para eventos especiais</h3>
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
                     <a class="" href="about_us.html">
-                        <img src="example/welcome_3.jpg" alt="">
+                        <img src="img/welcome_3.png" alt="">
                         <div class="welcome text-center">
                             <i></i>
                         </div>
                     </a>
                 </div>
-                <h3>Encontre próximos eventos</h3>
+                <h3>Apresentações em eventos</h3>
             </div>
         </div>
     </div>
