--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ pre_footer_link: contato
                 </div>
             </div>
         </div>
+        <!-- all img in this section have 0,63:1 porportional ratio -->
         <div class="row text-center">
             <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
