change index img

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ pre_footer_link: contato
             <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
                     <a class="" href="serviços.html">
-                        <img src="img/welcome_1.png" alt="">
+                        <img src="img/welcome_1.jpg" alt="">
                         <div class="welcome text-center">
                             <i></i>
                         </div>
