change img link index

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ pre_footer_link: contato
         <div class="row text-center">
             <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
-                    <a class="" href="serviços.html">
+                    <a class="" href="horarios.html">
                         <img src="img/welcome_1.jpg" alt="">
                         <div class="welcome text-center">
                             <i></i>
@@ -105,7 +105,7 @@ pre_footer_link: contato
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
-                    <a class="" href="horarios.html">
+                    <a class="" href="contato.html">
                         <img src="img/welcome_2.png" alt="">
                         <div class="welcome text-center">
                             <i></i>
@@ -116,7 +116,7 @@ pre_footer_link: contato
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
-                    <a class="" href="about_us.html">
+                    <a class="" href="contato.html">
                         <img src="img/welcome_3.png" alt="">
                         <div class="welcome text-center">
                             <i></i>
