--- a/equipe.html
+++ b/equipe.html
@@ -56,7 +56,7 @@ layout: default
                 <div class="col-sm-12">
                     <div class="classes media class_desc">
                         <a href="#" class="pull-left">
-                            <img src="img/team/Giovanna_Leoni_2.jpg" alt="image01" class="media-object">
+                            <img src="img/team/Giovanna_Leoni_3.jpeg" alt="image01" class="media-object">
                         </a>
 
                         <div class="media-body">
