finish vacation timetable

--- a/horarios.html
+++ b/horarios.html
@@ -548,163 +548,199 @@ musical_teory_III: Anatomia aplicada a dança de salão
                             <tbody>
 
                                 <tr>
-                                    <th>19:00 - 20:00</th>
-                                    <td>
-                                        <a href="./class-single.html" class="Hip-Hop">
-                                            Hip-Hop
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Jazz">
-                                            Jazz
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Latin">
-                                            Latin
-                                        </a>
-                                    </td>
-                                    <td>
 
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Jazz">
-                                            Jazz
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Ballet">
-                                            Ballet
-                                        </a>
-                                    </td>
-                                    <td></td>
-                                </tr>
+                                        <th>19:00 - 20:00</th>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_I">
+                                                {{ page.dance_forro_I }}
+                                            </a>
+                                        </td>
 
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_I">
+                                                {{ page.dance_forro_I }}
+                                            </a>
+                                        </td>
 
-                                <tr>
-                                    <th>20:00 - 21:00</th>
-                                    <td>
-                                        <a href="./class-single.html" class="Hip-Hop">
-                                            Hip-Hop
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Jazz">
-                                            Jazz
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Latin">
-                                            Latin
-                                        </a>
-                                    </td>
-                                    <td>
-
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Jazz">
-                                            Jazz
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Hip-Hop">
-                                            Hip-Hop
-                                        </a>
-                                    </td>
-                                    <td></td>
-                                </tr>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_I">
+                                                {{ page.dance_forro_I }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_I">
+                                                {{ page.dance_forro_I }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_I">
+                                                {{ page.dance_forro_I }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_I">
+                                                {{ page.dance_forro_I }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                        </td>
+                                    </tr>
 
 
-                                <tr>
-                                    <th>20:00 - 21:00</th>
-                                    <td>
-                                        <a href="./class-single.html" class="Ballet">
-                                            Ballet
-                                        </a>
-                                    </td>
-                                    <td></td>
-                                    <td>
-                                        <a href="./class-single.html" class="Jazz">
-                                            Jazz
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Hip-Hop">
-                                            Hip-Hop
-                                        </a>
-                                    </td>
-                                    <td></td>
-                                    <td>
-                                        <a href="./class-single.html" class="Hip-Hop">
-                                            Hip-Hop
-                                        </a>
-                                    </td>
-                                    <td></td>
-                                </tr>
+                                    <tr>
+                                        <th>20:00 - 21:00</th>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_II">
+                                                {{ page.dance_forro_II }}
+                                            </a>
+                                        </td>
+
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_II">
+                                                {{ page.dance_forro_II }}
+                                            </a>
+                                        </td>
+
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_II">
+                                                {{ page.dance_forro_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_II">
+                                                {{ page.dance_forro_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_II">
+                                                {{ page.dance_forro_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_forro_II">
+                                                {{ page.dance_forro_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                        </td>
+                                    </tr>
 
 
-                                <tr>
-                                    <th>20:00 - 21:00</th>
-                                    <td>
-                                        <a href="./class-single.html" class="Hip-Hop">
-                                            Hip-Hop
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Jazz">
-                                            Jazz
-                                        </a>
-                                    </td>
-                                    <td>
+                                    <tr>
+                                        <th>20:00 - 21:00</th>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_zouk_II">
+                                                {{ page.dance_zouk_II }}
+                                            </a>
+                                        </td>
 
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Latin">
-                                            Latin
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Jazz">
-                                            Jazz
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Hip-Hop">
-                                            Hip-Hop
-                                        </a>
-                                    </td>
-                                    <td></td>
-                                </tr>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_zouk_II">
+                                                {{ page.dance_zouk_II }}
+                                            </a>
+                                        </td>
+
+                                        <td>
+                                            <a href="./class-single.html" class="dance_zouk_II">
+                                                {{ page.dance_zouk_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_zouk_II">
+                                                {{ page.dance_zouk_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_zouk_II">
+                                                {{ page.dance_zouk_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_zouk_II">
+                                                {{ page.dance_zouk_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                        </td>
+                                    </tr>
 
 
-                                <tr>
-                                    <th>20:00 - 21:00</th>
-                                    <td>
-                                        <a href="./class-single.html" class="Jazz">
-                                            Jazz
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Jazz">
-                                            Jazz
-                                        </a>
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Latin">
-                                            Latin
-                                        </a>
-                                    </td>
-                                    <td>
+                                    <tr>
+                                        <th>20:00 - 21:00</th>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_samba_II">
+                                                {{ page.dance_samba_II }}
+                                            </a>
+                                        </td>
 
-                                    </td>
-                                    <td>
-                                        <a href="./class-single.html" class="Jazz">
-                                            Jazz
-                                        </a>
-                                    </td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_samba_II">
+                                                {{ page.dance_samba_II }}
+                                            </a>
+                                        </td>
+
+                                        <td>
+                                            <a href="./class-single.html" class="dance_samba_II">
+                                                {{ page.dance_samba_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_samba_II">
+                                                {{ page.dance_samba_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_samba_II">
+                                                {{ page.dance_samba_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_samba_II">
+                                                {{ page.dance_samba_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                        </td>
+                                    </tr>
+
+
+                                    <tr>
+                                        <th>20:00 - 21:00</th>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_tango_II">
+                                                {{ page.dance_tango_II }}
+                                            </a>
+                                        </td>
+
+                                        <td>
+                                            <a href="./class-single.html" class="dance_tango_II">
+                                                {{ page.dance_tango_II }}
+                                            </a>
+                                        </td>
+
+                                        <td>
+                                            <a href="./class-single.html" class="dance_tango_II">
+                                                {{ page.dance_tango_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_tango_II">
+                                                {{ page.dance_tango_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_tango_II">
+                                                {{ page.dance_tango_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                            <a href="./class-single.html" class="dance_tango_II">
+                                                {{ page.dance_tango_II }}
+                                            </a>
+                                        </td>
+                                        <td>
+                                        </td>
+                                    </tr>
 
                             </tbody>
                         </table>
