--- a/sobre.html
+++ b/sobre.html
@@ -30,8 +30,10 @@ layout: default
         <div class="row">
             <div class="col-sm-12">
                 <div class="description">
-                    <h2 class="text-center">Bem-vindo a {{ site.title }}!</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Proin nibh augue, suscipit a, scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus. Phasellus pharetra nulla ac diam.
+                    <h2 class="text-center">{{ site.title }}</h2>
+                    <p>A Compassos Studio de Dança nasceu do sonho do professor, coreógrafo e dançarino de salão Ary Demosthenes Neto no ano de 2010.
+                      Depois de uma longa trajetória de aprendizado e ensino iniciada nos anos 1990, Ary reuniu professores que compartilham dos valores de amizade e alegria aplicados à dança para construir a escola.
+                      Com essa equipe, que envolve ainda assistentes, bolsistas e alunos, foi formada a Família Compassos.
                     </p>
                 </div>
             </div>
@@ -106,10 +108,10 @@ layout: default
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In maximus ligula semper metus pellentesque mattis. Maecenas  volutpat, diam enim sagittis quam, id porta quam. Sed id dolor consectetur fermentum nibh volutpat, accumsan purus.
+              A missão da Compassos é promover qualidade de vida e bem-estar por meio da prática de dança de salão em um ambiente de amizade, respeito e amor.
             </div>
             <div class="col-md-4 col-sm-6">
-                Etiam sit amet fringilla lacus. Pellentesque suscipit ante at ullamcorper pulvinar neque porttitor. Integer lectus. Praesent sed nisi eleifend, fermentum orci amet, iaculis libero. Donec vel ultricies purus. Nam dictum sem, eu aliquam.
+              Nossa visão é ser a maior e melhor escola de dança de salão do Centro-Oeste, reconhecida por seu ambiente acolhedor, por sua metodologia humanizada de ensino e pela qualidade técnica de sua equipe.
             </div>
         </div>
     </div>
@@ -118,16 +120,19 @@ layout: default
    <section id="team" class="grey_section">
         <div class="container">
             <header class="section_header text-center">
-                <h2>Time criativo</h2>
+                <h2>Transforme seus eventos em uma gigantesca pista de dança!</h2>
             </header>
             <div class="row to_animate_child_blocks">
                 <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
                         <img src="example/team/01.jpg" alt="team">
                         <div class="caption">
-                            <h4>Karl Lawson</h4>
+                            <h4>Casamento</h4>
                             <p class="color">Fundador e CEO</p>
-                            <p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.</p>
+                            <p>
+                              As coreografias são montadas a partir de música escolhida pelo casal e que, normalmente, tem relação com sua história de amor. Depois de conhecer essa história e as preferências dos noivos, os professores da Compassos desenvolvem a coreografia. De acordo com o desejo do casal, a dança pode emocionar, divertir ou fazer os convidados dançarem.
+                              Os noivos não precisam ter qualquer conhecimento prévio de dança para participar de uma coreografia.
+                            </p>
                         </div>
 
                     </div>
@@ -136,7 +141,7 @@ layout: default
                     <div class="team_desc">
                         <img src="example/team/02.jpg" alt="team">
                         <div class="caption">
-                            <h4>Lara Marsh</h4>
+                            <h4>Formatura</h4>
                             <p class="color">Instrutora de dança</p>
                             <p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.</p>
                         </div>
@@ -147,9 +152,11 @@ layout: default
                     <div class="team_desc">
                         <img src="example/team/03.jpg" alt="team">
                         <div class="caption">
-                            <h4>Giovan Doe</h4>
-                            <p class="color">Instrutor de dança</p>
-                            <p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.</p>
+                            <h4>Festas de 15 anos</h4>
+                            <p class="color">Encante e se encante</p>
+                            <p>
+                              Em um dia inesquecível, queremos fazer de sua festa um momento singular. Nada além em uma festa de debutante, o que há de mais maravilhoso do que a dança da debutante? Para isto oferessemos profissionais que podem transformar esse momento fantástico.
+                            </p>
                         </div>
 
                     </div>
@@ -158,9 +165,11 @@ layout: default
                     <div class="team_desc">
                         <img src="example/team/04.jpg" alt="team">
                         <div class="caption">
-                            <h4>Cristovão Lee</h4>
+                            <h4>Eventos especiais</h4>
                             <p class="color">Instrutor de dança</p>
-                            <p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.</p>
+                            <p>
+                              Emoção e profissionalismo são características intrinsecas da Compassos. Com satisfação nós tornaremos seu evento em um enorme espetáculo, cheio de diversão, prazer e afeto. Um momento sublime para você e seus convidados.
+                            </p>
                         </div>
 
                     </div>
@@ -168,3 +177,4 @@ layout: default
             </div>
         </div>
     </section>
+-->
