change sobre nos img

--- a/sobre.html
+++ b/sobre.html
@@ -38,41 +38,6 @@ layout: default
                 </div>
             </div>
         </div>
-        <div class="row text-center">
-            <div class="col-sm-4 welcome_cont">
-                <div class="welcome_desc">
-                    <a class="" href="about_us.html">
-                        <img src="example/welcome_1.jpg" alt="">
-                        <div class="welcome text-center">
-                            <i></i>
-                        </div>
-                    </a>
-                </div>
-                <h3>Garanta seu certificado</h3>
-            </div>
-             <div class="col-sm-4 welcome_cont">
-                <div class="welcome_desc">
-                    <a class="" href="about_us.html">
-                        <img src="example/welcome_2.jpg" alt="">
-                        <div class="welcome text-center">
-                            <i></i>
-                        </div>
-                    </a>
-                </div>
-                <h3>Verifique seu cronograma</h3>
-            </div>
-             <div class="col-sm-4 welcome_cont">
-                <div class="welcome_desc">
-                    <a class="" href="about_us.html">
-                        <img src="example/welcome_3.jpg" alt="">
-                        <div class="welcome text-center">
-                            <i></i>
-                        </div>
-                    </a>
-                </div>
-                <h3>Encontre próximos eventos</h3>
-            </div>
-        </div>
     </div>
 </section>
 
@@ -85,28 +50,7 @@ layout: default
             </h2>
         </div>
         <div class="row">
-             <div class="col-md-4 col-sm-12">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                        <span>Adutos, 80%</span>
-                    </div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 95%">
-                        <span>Crianças, 95%</span>
-                    </div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 92%">
-                        <span>Aulas particulares, 92%</span>
-                    </div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 86%">
-                        <span>Coroegrafias de casamento, 86%</span>
-                    </div>
-                </div>
-            </div>
+
             <div class="col-md-4 col-sm-6">
               A missão da Compassos é promover qualidade de vida e bem-estar por meio da prática de dança de salão em um ambiente de amizade, respeito e amor.
             </div>
@@ -125,10 +69,10 @@ layout: default
             <div class="row to_animate_child_blocks">
                 <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
-                        <img src="example/team/01.jpg" alt="team">
+                        <img src="img/casamento_1.jpg" alt="team">
                         <div class="caption">
                             <h4>Casamento</h4>
-                            <p class="color">Fundador e CEO</p>
+                            <p class="color">Um momento inesquecível</p>
                             <p>
                               As coreografias são montadas a partir de música escolhida pelo casal e que, normalmente, tem relação com sua história de amor. Depois de conhecer essa história e as preferências dos noivos, os professores da Compassos desenvolvem a coreografia. De acordo com o desejo do casal, a dança pode emocionar, divertir ou fazer os convidados dançarem.
                               Os noivos não precisam ter qualquer conhecimento prévio de dança para participar de uma coreografia.
@@ -139,10 +83,10 @@ layout: default
                 </div>
                 <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
-                        <img src="example/team/02.jpg" alt="team">
+                        <img src="img/formatura_1.jpg" alt="team">
                         <div class="caption">
                             <h4>Formatura</h4>
-                            <p class="color">Instrutora de dança</p>
+                            <p class="color">Vibre com sua conquista</p>
                             <p>Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.Mauris vel neque sit amet nunc gravida congue sed sit amet purus. Quisque lacus quam, egestas ac tincidunt.</p>
                         </div>
 
@@ -150,7 +94,7 @@ layout: default
                 </div>
                 <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
-                        <img src="example/team/03.jpg" alt="team">
+                        <img src="img/debutante_1.jpg" alt="team">
                         <div class="caption">
                             <h4>Festas de 15 anos</h4>
                             <p class="color">Encante e se encante</p>
@@ -163,10 +107,10 @@ layout: default
                 </div>
                 <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
-                        <img src="example/team/04.jpg" alt="team">
+                        <img src="img/evento_1.jpg" alt="team">
                         <div class="caption">
                             <h4>Eventos especiais</h4>
-                            <p class="color">Instrutor de dança</p>
+                            <p class="color">Algo memorável</p>
                             <p>
                               Emoção e profissionalismo são características intrinsecas da Compassos. Com satisfação nós tornaremos seu evento em um enorme espetáculo, cheio de diversão, prazer e afeto. Um momento sublime para você e seus convidados.
                             </p>
