fix sobre nós color

--- a/sobre.html
+++ b/sobre.html
@@ -31,7 +31,8 @@ layout: default
             <div class="col-sm-12">
                 <div class="description">
                     <h2 class="text-center">{{ site.title }}</h2>
-                    <p>A Compassos Studio de Dança nasceu do sonho do professor, coreógrafo e dançarino de salão Ary Demosthenes Neto no ano de 2010.
+                    <img class="col-sm-6 margin_img_sobre"src="img/sobre_nos_1.jpg" alt="team">
+                    <p class="margin_img_sobre text-justify">A Compassos Studio de Dança nasceu do sonho do professor, coreógrafo e dançarino de salão Ary Demosthenes Neto no ano de 2010.
                       Depois de uma longa trajetória de aprendizado e ensino iniciada nos anos 1990, Ary reuniu professores que compartilham dos valores de amizade e alegria aplicados à dança para construir a escola.
                       Com essa equipe, que envolve ainda assistentes, bolsistas e alunos, foi formada a Família Compassos.
                     </p>
@@ -50,7 +51,9 @@ layout: default
             </h2>
         </div>
         <div class="row">
-
+            <div class="col-md-4 col-sm-6">
+              Com ambientes amplos e climatizados, a Compassos Studio de Dança dispõe de espaços ideais para a prática de dança com conforto e qualidade. Adaptadas para aulas de dança de salão, street dance, balé e ritmos diversos, as salas são ideais para aulas em grupo ou particulares.
+            </div>
             <div class="col-md-4 col-sm-6">
               A missão da Compassos é promover qualidade de vida e bem-estar por meio da prática de dança de salão em um ambiente de amizade, respeito e amor.
             </div>
@@ -69,7 +72,7 @@ layout: default
             <div class="row to_animate_child_blocks">
                 <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
-                        <img src="img/casamento_1.jpg" alt="team">
+                        <img src="img/casamento_1.jpg" alt="Casamento">
                         <div class="caption">
                             <h4>Casamento</h4>
                             <p class="color">Um momento inesquecível</p>
@@ -83,7 +86,7 @@ layout: default
                 </div>
                 <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
-                        <img src="img/formatura_1.jpg" alt="team">
+                        <img src="img/formatura_1.jpg" alt="Formatura">
                         <div class="caption">
                             <h4>Formatura</h4>
                             <p class="color">Vibre com sua conquista</p>
@@ -94,7 +97,7 @@ layout: default
                 </div>
                 <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
-                        <img src="img/debutante_1.jpg" alt="team">
+                        <img src="img/debutante_1.jpg" alt="Debutante">
                         <div class="caption">
                             <h4>Festas de 15 anos</h4>
                             <p class="color">Encante e se encante</p>
@@ -107,7 +110,7 @@ layout: default
                 </div>
                 <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
-                        <img src="img/evento_1.jpg" alt="team">
+                        <img src="img/evento_1.jpg" alt="Evento">
                         <div class="caption">
                             <h4>Eventos especiais</h4>
                             <p class="color">Algo memorável</p>
