--- a/sobre.html
+++ b/sobre.html
@@ -28,16 +28,16 @@ layout: default
 <section id="welcome" class="light_section">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
+
                 <div class="description">
                     <h2 class="text-center">{{ site.title }}</h2>
-                    <img class="col-sm-6 margin_img_sobre"src="img/sobre_nos_1.jpg" alt="team">
-                    <p class="margin_img_sobre text-justify">A Compassos Studio de Dança nasceu do sonho do professor, coreógrafo e dançarino de salão Ary Demosthenes Neto no ano de 2010.
+                    <img class="img_resize"src="img/sobre_nos_1.jpg" alt="team">
+                    <p class="text_sobre_desc text-center">A Compassos - Stúdio de Dança nasceu do sonho do professor, coreógrafo e dançarino de salão Ary Demosthenes Neto no ano de 2010.
                       Depois de uma longa trajetória de aprendizado e ensino iniciada nos anos 1990, Ary reuniu professores que compartilham dos valores de amizade e alegria aplicados à dança para construir a escola.
                       Com essa equipe, que envolve ainda assistentes, bolsistas e alunos, foi formada a Família Compassos.
                     </p>
                 </div>
-            </div>
+
         </div>
     </div>
 </section>
@@ -46,7 +46,7 @@ layout: default
 <section id="about" class="light_section">
     <div class="container">
         <div class="row">
-            <h2 class="section-title text-left">
+            <h2 class="section-title text-center">
                 Sobre o Studio
             </h2>
         </div>
