--- a/galeria.html
+++ b/galeria.html
@@ -34,138 +34,60 @@ layout: default
 
                     <div id="isotope_filters">
                         <a href="#" data-filter="*" class="selected">Mostrar tudo</a>
+                        <a href="#" data-filter=".adult">Adultos</a>
                         <a href="#" data-filter=".kids">Crianças</a>
                         <a href="#" data-filter=".professional">Profissional</a>
                         <a href="#" data-filter=".wedding">Casamento</a>
                     </div>
 
                     <div id="isotope_container" class="isotope row masonry-layout">
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
-
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/01.jpg"><img src="example/gallery/01.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/01.jpg"></a></h3>
-
-                            </div>
+                      
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/00.jpg"><img src="img/galeria/00.jpg" alt=""></a>
                         </div>
 
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
-
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/02.jpg"><img src="example/gallery/02.jpg" alt=""></a>
-
-                            <div>
-                                <h3> <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/02.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/01.jpg"><img src="img/galeria/01.jpg" alt=""></a>
                         </div>
 
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
-
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/03.jpg"><img src="example/gallery/03.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/03.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/03.jpg"><img src="img/galeria/03.jpg" alt=""></a>
                         </div>
 
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 wedding">
-
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/04.jpg"><img src="example/gallery/04.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/04.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/04.jpg"><img src="img/galeria/04.jpg" alt=""></a>
                         </div>
 
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 wedding">
-
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/05.jpg"><img src="example/gallery/05.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/05.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/05.jpg"><img src="img/galeria/05.jpg" alt=""></a>
                         </div>
 
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
-
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/06.jpg"><img src="example/gallery/06.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/06.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/06.jpg"><img src="img/galeria/06.jpg" alt=""></a>
                         </div>
 
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
-
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/07.jpg"><img src="example/gallery/07.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/07.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/07.jpg"><img src="img/galeria/07.jpg" alt=""></a>
                         </div>
 
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
-
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/08.jpg"><img src="example/gallery/08.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/08.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/08.jpg"><img src="img/galeria/08.jpg" alt=""></a>
                         </div>
 
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
-
-                              <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/09.jpg"><img src="example/gallery/09.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/09.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/09.jpg"><img src="img/galeria/09.jpg" alt=""></a>
                         </div>
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
 
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/10.jpg"><img src="example/gallery/10.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/10.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/10.jpg"><img src="img/galeria/10.jpg" alt=""></a>
                         </div>
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 wedding">
 
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/11.jpg"><img src="example/gallery/11.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/11.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/11.jpg"><img src="img/galeria/11.jpg" alt=""></a>
                         </div>
-                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
 
-                                <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/12.jpg"><img src="example/gallery/12.jpg" alt=""></a>
-
-                            <div>
-                                <h3><a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="example/gallery/12.jpg"></a></h3>
-
-
-                            </div>
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/02.jpg"><img src="img/galeria/02.jpg" alt=""></a>
                         </div>
 
 
