--- a/galeria.html
+++ b/galeria.html
@@ -41,7 +41,7 @@ layout: default
                     </div>
 
                     <div id="isotope_container" class="isotope row masonry-layout">
-                      
+
                         <div class="isotope-item gallery-item col-md-4 col-sm-6 adult">
                           <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/00.jpg"><img src="img/galeria/00.jpg" alt=""></a>
                         </div>
@@ -90,6 +90,53 @@ layout: default
                           <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/02.jpg"><img src="img/galeria/02.jpg" alt=""></a>
                         </div>
 
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/12.jpg"><img src="img/galeria/12.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/13.jpg"><img src="img/galeria/13.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/14.jpg"><img src="img/galeria/14.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/15.jpg"><img src="img/galeria/15.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/16.jpg"><img src="img/galeria/16.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 kids">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/17.jpg"><img src="img/galeria/17.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/18.jpg"><img src="img/galeria/18.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/19.jpg"><img src="img/galeria/19.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/20.jpg"><img src="img/galeria/20.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/21.jpg"><img src="img/galeria/21.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/22.jpg"><img src="img/galeria/22.jpg" alt=""></a>
+                        </div>
+
+                        <div class="isotope-item gallery-item col-md-4 col-sm-6 professional">
+                          <a class="p-view prettyPhoto " title="" data-gal="prettyPhoto[gal]" href="img/galeria/23.jpg"><img src="img/galeria/23.jpg" alt=""></a>
+                        </div>
 
                     </div>
 
