--- a/horarios.html
+++ b/horarios.html
@@ -54,7 +54,7 @@ musical_teory_III: Anatomia aplicada a dança de salão
             <div class="row">
                 <div class="text-center filters col-sm-12">
                     <ul id="timetable_filter">
-                        <li><a class="selected" data-filter="all" href="#">Todas</a></li>
+                        <li><a class="selected" data-filter="all" href="#" id="all_filters">Todas</a></li>
                         <li><a data-filter=".dance_tango_I" href="#" class="">{{ page.dance_tango_I }}</a></li>
                         <li><a data-filter=".dance_tango_II" href="#" class="">{{ page.dance_tango_II }}</a></li>
                         <li><a data-filter=".dance_samba_I" href="#" class="">{{ page.dance_samba_I }}</a></li>
