--- a/horarios.html
+++ b/horarios.html
@@ -522,7 +522,7 @@ musical_teory_III: Anatomia aplicada a dança de salão
         </div>
 
 
-        <div class="container">
+        <div class="container change_distance_table">
             <div class="row">
                  <header class="section_header text-center">
                     <h3>{{ page.vacation_second_table }}</h3>
