--- a/index.html
+++ b/index.html
@@ -63,7 +63,17 @@ pre_footer_link: contato
                     </div>
                 </div>
             </li>
-            
+            <li>
+                <div class="slide_overlay">
+                    <img src="img/carousel/festa_2_1.jpg" alt="">
+                </div>
+                <div class="slide_description_wrapper">
+                    <div class="slide_description">
+                        <h2 data-animation="fadeInDown">Todos os eventos são especiais</h2>
+                        <h4 data-animation="fadeInUp">Ambiente de descontração entre professores e alunos celebrando a dança</h4>
+                    </div>
+                </div>
+            </li>
         </ul>
     </div>
 
@@ -95,7 +105,7 @@ pre_footer_link: contato
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
-                    <a class="" href="contato.html">
+                    <a class="" href="horarios.html">
                         <img src="img/welcome_2.png" alt="">
                         <div class="welcome text-center">
                             <i></i>
@@ -106,7 +116,7 @@ pre_footer_link: contato
             </div>
              <div class="col-sm-4 welcome_cont">
                 <div class="welcome_desc">
-                    <a class="" href="contato.html">
+                    <a class="" href="about_us.html">
                         <img src="img/welcome_3.png" alt="">
                         <div class="welcome text-center">
                             <i></i>
@@ -165,7 +175,7 @@ pre_footer_link: contato
             <h2>Por que nos escolher?</h2>
         </header>
         <div class="row">
-            <div class="col-sm-6 col-md-4 text-center">
+            <div class="col-sm-4 col-md-4 text-center">
                 <div class="">
                     <div class="icon">
                        <i class="fa fa-flag-o"></i>
@@ -174,7 +184,7 @@ pre_footer_link: contato
                     <p class="text-left">Temos ambientes, amplos e climatizados, ideais para a prática de dança com conforto e qualidade. Adaptados para dança de salão, street dance, balé e ritmos diversos, eles são perfeitos para aulas em grupo ou particulares.</p>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 text-center">
+            <div class="col-sm-4 col-md-4 text-center">
                 <div class="">
                     <div class="icon">
                        <i class="fa fa-clock-o"></i>
@@ -183,7 +193,7 @@ pre_footer_link: contato
                     <p class="text-left">A Compassos conta com turmas distribuídas em diferentes horários ao longo da semana. Estes escolhidos de maneira especial para melhor atender aos nossos alunos.</p>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 text-center">
+            <div class="col-sm-4 col-md-4 text-center">
                 <div class="">
                     <div class="icon">
                        <i class="fa fa-magic"></i>
@@ -192,7 +202,9 @@ pre_footer_link: contato
                     <p class="text-left">Sinta a leveza de nossos passos e veja por si mesmo a beleza dos movimentos. Construa parte de suas excelentes memórias tendo êxito em desafios pessoais e em seus sonhos.</p>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 text-center">
+          </div>
+          <div class="row">
+            <div class="col-sm-4 col-md-4 text-center">
                 <div class="">
                     <div class="icon">
                        <i class="fa fa-heart-o"></i>
@@ -201,7 +213,7 @@ pre_footer_link: contato
                     <p class="text-left">Não é o ritmo nem os passos ou mesmo a música que fazem a dança, mas a paixão efervescente que vai dentro d'alma de quem ousa dançar.</p>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 text-center">
+            <div class="col-sm-4 col-md-4 text-center">
                 <div class="">
                     <div class="icon">
                        <i class="fa fa-comments-o"></i>
@@ -210,7 +222,7 @@ pre_footer_link: contato
                     <p class="text-left">Promover a alegria, a formação de laços de amizade e a melhoria da qualidade de vida a partir da prática de dança são os maiores objetivos da Compassos.</p>
                 </div>
             </div>
-            <div class="col-sm-6 col-md-4 text-center">
+            <div class="col-sm-4 col-md-4 text-center">
                 <div class="">
                     <div class="icon">
                        <i class="fa fa-smile-o"></i>
@@ -219,7 +231,7 @@ pre_footer_link: contato
                     <p class="text-left">Ser a maior e melhor escola de dança de salão do Centro-Oeste, reconhecida por seu ambiente acolhedor, por sua metodologia humanizada de ensino e pela qualidade técnica de sua equipe.</p>
                 </div>
             </div>
-        </div>
+          </div>
     </div>
 </section>
 
