change sobre eventos

--- a/sobre.html
+++ b/sobre.html
@@ -70,7 +70,7 @@ layout: default
                 <h2>Transforme seus eventos em uma gigantesca pista de dança!</h2>
             </header>
             <div class="row to_animate_child_blocks">
-                <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
+                <div class="block col-sm-6 col-md-6 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
                         <img src="img/casamento_1.jpg" alt="Casamento">
                         <div class="caption">
@@ -84,7 +84,7 @@ layout: default
 
                     </div>
                 </div>
-                <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
+                <div class="block col-sm-6 col-md-6 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
                         <img src="img/formatura_1.jpg" alt="Formatura">
                         <div class="caption">
@@ -95,7 +95,9 @@ layout: default
 
                     </div>
                 </div>
-                <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
+              </div>
+              <div class="row to_animate_child_blocks">
+                <div class="block col-sm-6 col-md-6 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
                         <img src="img/debutante_1.jpg" alt="Debutante">
                         <div class="caption">
@@ -108,7 +110,7 @@ layout: default
 
                     </div>
                 </div>
-                <div class="block col-sm-6 col-md-3 text-left to_animate" data-animation="fadeInUp">
+                <div class="block col-sm-6 col-md-6 text-left to_animate" data-animation="fadeInUp">
                     <div class="team_desc">
                         <img src="img/evento_1.jpg" alt="Evento">
                         <div class="caption">
