--- a/sobre.html
+++ b/sobre.html
@@ -30,12 +30,15 @@ layout: default
         <div class="row">
 
                 <div class="description">
+
                     <h2 class="text-center">{{ site.title }}</h2>
+                    <div class="title_container_about"></div>
                     <img class="img_resize"src="img/sobre_nos_1.jpg" alt="team">
                     <p class="text_sobre_desc text-center">A Compassos - Stúdio de Dança nasceu do sonho do professor, coreógrafo e dançarino de salão Ary Demosthenes Neto no ano de 2010.
                       Depois de uma longa trajetória de aprendizado e ensino iniciada nos anos 1990, Ary reuniu professores que compartilham dos valores de amizade e alegria aplicados à dança para construir a escola.
                       Com essa equipe, que envolve ainda assistentes, bolsistas e alunos, foi formada a Família Compassos.
                     </p>
+                    <div class="title_container_about"></div>
                 </div>
 
         </div>
