--- a/contato.html
+++ b/contato.html
@@ -33,10 +33,10 @@ layout: default
                 </header>
                 <p>Caso tenha alguma dúvida sobre nossas aulas, horários ou queira saber mais sobre assuntos relacionados à dança de salão, ficaremos felizes em respondê-lo(a)!  .
                 <br><br>
-                    <strong>Telefone:</strong> {{ site.phone_number }}
+                    Telefone:<a href="tel:{{ site.phone_number }}"><strong> {{ site.phone_number }}</strong></a>
                 </p>
                 <p>
-                    <strong>Email:</strong> <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+                    Email:<a href="mailto:{{ site.email }}">{{ site.email }}</a>
                 </p>
                 <p>
                     <strong>Endereço:</strong> {{ site.address }}
